--- a/src/app/components/admin/admin-users/admin-users.component.html
+++ b/src/app/components/admin/admin-users/admin-users.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-admin-header></app-admin-header>
 <main class="admin">
     <div class="row">
         <section class="admin__menu col-xxl-2 col-lg-3">
@@ -51,8 +51,8 @@
         </section>
         <section class="admin__content col-xxl-10 col-lg-9">
             <div class="admin__content-title mt-4 ms-3">Gestión de clientes</div>
-            <div class="d-flex justify-content-between mt-4 mb-2">
-                <div>
+            <div class="d-flex justify-content-between mt-4 mb-2 ">
+                <div class="ms-2 ms-lg-0">
                     <input type="text" class="admin__modal-create-form-control form-control"
                         [(ngModel)]="clientsFilter.name" placeholder="Búsqueda por nombre">
                 </div>
@@ -67,7 +67,7 @@
                     </a>
                 </div>
             </div>
-            <table class="admin__content-table text-center mb-4">
+            <table class="admin__content-table text-center mb-4 mx-2 mx-lg-0">
                 <thead>
                     <tr>
                         <th class="admin__content-head" (click)="setOrder('id')" [class.order-active]="order==='id'">
