Redireccionamiento payComponent si user no logueado, limpieza código (console.log innecesarios), revisión mensajes mostrados en caso error y eliminacion update client en admin-users component

--- a/src/app/components/admin/admin-accommodations/admin-accommodations.component.html
+++ b/src/app/components/admin/admin-accommodations/admin-accommodations.component.html
@@ -322,6 +322,7 @@
                                 </svg>
                                 La supresión de un alojamiento es irreversible
                             </div>
+                            <div class="text-message my-4 text-center">{{adminAccommodationsError}}</div>
                             <div class="container-xl">
                                 <div class="admin__modal-delete-buttons mb-3 row ">
                                     <button type="submit"
