--- a/src/app/components/admin/admin-acco-units/admin-acco-units.component.html
+++ b/src/app/components/admin/admin-acco-units/admin-acco-units.component.html
@@ -362,6 +362,7 @@
                                 </svg>
                                 La supresión de un alojamiento es irreversible
                             </div>
+                            <div class="text-message my-4 text-center">{{adminAccoUnitsError}}</div>
                             <div class="container-xl">
                                 <div class="admin__modal-delete-buttons mb-3 row ">
                                     <button type="submit"
