Implementación n de alojamientos encontrados de manera dinámica

--- a/src/app/components/consulta/consulta.component.html
+++ b/src/app/components/consulta/consulta.component.html
@@ -501,7 +501,7 @@
       </section>
       <section class="consulta__results col-lg-9">
         <div class="consulta__results-main-title">
-          <div>1 alojamiento encontrado</div>
+          <div>{{ data.length }} alojamientos encontrados</div>
         </div>
         <div class="consulta__results-filters d-flex justify-content-end mt-4">
           <select class="consulta__results-select form-select">
