--- a/src/app/components/pay/pay.component.html
+++ b/src/app/components/pay/pay.component.html
@@ -75,9 +75,31 @@
             </div>
             <div class="row mt-5">
                 <div class="pay__book-form mb-4">
-                    <div class="pay__book-form-title mt-3">
+                    <div class="pay__book-form-title mt-3 d-flex justify-content-between">
                         <div class="pay__book-form-text">Datos de pago</div>
+                        <div class="pay__book-form-cards d-flex justify-content-center align-items-center me-2" data-bs-toggle="collapse" href="#myCards" role="button" aria-expanded="false" aria-controls="mis tarjetas">
+                            <div>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#272A57" class="bi bi-credit-card-2-back-fill" viewBox="0 0 16 16">
+                                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5H0zm11.5 1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM0 11v1a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-1z"/>
+                                  </svg> Mis tarjetas</div>
+                        </div>
                     </div>
+                    <div class="collapse col-lg-6 offset-lg-6 mt-2" id="myCards">
+                        <div class="card card-body">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="card" id="card">
+                                <label class="form-check-label pay__book-form-info" for="card">
+                                    ****-****-****-1234
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="card" id="card">
+                                <label class="form-check-label pay__book-form-info" for="card">
+                                    ****-****-****-5678
+                                </label>
+                            </div>
+                        </div>
+                      </div>
                     <form class="needs-validation" novalidate [formGroup]="payForm">
                         <div class="pay__book-form-informations row gx-3">
                             <div
