Direccionamiento inicio (por ciudades y categorías), correcciones estilo admin components, mejora toasts y cambios en myCard

--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -115,31 +115,31 @@
         </div>
 
         <div class="inicio__cities-grid">
-            <a [routerLink]="['/consulta']"
+            <a (click)="searchCity('Madrid')"
                 class="inicio__cities-grid-column inicio__cities-grid-madrid text-decoration-none border border-1">
                 <p class="inicio__cities-grid-text text-center">Madrid</p>
             </a>
-            <a [routerLink]="['/consulta']"
+            <a (click)="searchCity('Valencia')"
                 class="inicio__cities-grid-column inicio__cities-grid-valencia text-decoration-none border border-1">
                 <p class="inicio__cities-grid-text text-center">Valencia</p>
             </a>
-            <a [routerLink]="['/consulta']"
+            <a (click)="searchCity('Sevilla')"
                 class="inicio__cities-grid-column inicio__cities-grid-sevilla text-decoration-none border border-1">
                 <p class="inicio__cities-grid-text text-center">Sevilla</p>
             </a>
-            <a [routerLink]="['/consulta']"
+            <a (click)="searchCity('Ibiza')"
                 class="inicio__cities-grid-column inicio__cities-grid-ibiza text-decoration-none border border-1">
                 <p class="inicio__cities-grid-text text-center">Ibiza</p>
             </a>
-            <a [routerLink]="['/consulta']"
+            <a (click)="searchCity('Santiago de Compostela')"
                 class="inicio__cities-grid-column inicio__cities-grid-santiago text-decoration-none border border-1">
                 <p class="inicio__cities-grid-text text-center">Santiago de Compostela</p>
             </a>
-            <a [routerLink]="['/consulta']"
+            <a (click)="searchCity('Tenerife')"
                 class="inicio__cities-grid-column inicio__cities-grid-tenerife text-decoration-none border border-1">
                 <p class="inicio__cities-grid-text text-center">Tenerife</p>
             </a>
-            <a [routerLink]="['/consulta']"
+            <a (click)="searchCity('Barcelona')"
                 class="inicio__cities-grid-column inicio__cities-grid-barcelona text-decoration-none border border-1">
                 <p class="inicio__cities-grid-text text-center">Barcelona</p>
             </a>
@@ -154,19 +154,19 @@
             </p>
         </div>
         <div class="inicio__category-grid">
-            <a [routerLink]="['/consulta']"
+            <a (click)="searchCategory('houses')"
                 class="inicio__category-grid-column inicio__category-grid-houses text-decoration-none border border-1">
                 <p class="inicio__category-grid-text text-center">Casas y chalets</p>
             </a>
-            <a [routerLink]="['/consulta']"
+            <a (click)="searchCategory('hotels')"
                 class="inicio__category-grid-column inicio__category-grid-hotels text-decoration-none border border-1">
                 <p class="inicio__category-grid-text text-center">Hoteles</p>
             </a>
-            <a [routerLink]="['/consulta']"
+            <a (click)="searchCategory('hostels')"
                 class="inicio__category-grid-column inicio__category-grid-hostels text-decoration-none border border-1">
                 <p class="inicio__category-grid-text text-center">Albergues</p>
             </a>
-            <a [routerLink]="['/consulta']"
+            <a (click)="searchCategory('bungalows')"
                 class="inicio__category-grid-column inicio__category-grid-bungalows text-decoration-none border border-1">
                 <p class="inicio__category-grid-text text-center">Bungalows</p>
             </a>
