--- a/src/app/components/admin/admin-accommodations/admin-accommodations.component.html
+++ b/src/app/components/admin/admin-accommodations/admin-accommodations.component.html
@@ -57,8 +57,8 @@
                         [(ngModel)]="accommodationFilter.name" placeholder="Búsqueda por nombre">
                 </div>
                 <div class="admin__content-add-button d-flex justify-content-end mb-2">
-                    <a href="" class="me-3" data-bs-toggle="modal" data-bs-target="#admin-modal-create">
-                        <svg class="admin__content-links" xmlns="http://www.w3.org/2000/svg" width="35" height="35"
+                    <a href="" class="admin__content-links me-3" data-bs-toggle="modal" data-bs-target="#admin-modal-create">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35"
                             fill="#272A57" class="bi bi-plus-circle" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
                             <path
@@ -142,24 +142,24 @@
                         <td class="admin__content-cell">{{ accommodation.address }}</td>
                         <td class="admin__content-cell">{{ accommodation.location }}</td>
                         <td class="admin__content-cell">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#admin-modal-edit"
+                            <div class="admin__content-links" data-bs-toggle="modal" data-bs-target="#admin-modal-edit"
                                 (click)="selectAccommodationId(accommodation.id)">
-                                <svg class="admin__content-links" xmlns="http://www.w3.org/2000/svg" width="25"
+                                <svg  xmlns="http://www.w3.org/2000/svg" width="25"
                                     height="55" fill="#272A57" class="bi bi-tools" viewBox="0 0 16 16">
                                     <path
                                         d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.27 3.27a.997.997 0 0 0 1.414 0l1.586-1.586a.997.997 0 0 0 0-1.414l-3.27-3.27a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3q0-.405-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814zm9.646 10.646a.5.5 0 0 1 .708 0l2.914 2.915a.5.5 0 0 1-.707.707l-2.915-2.914a.5.5 0 0 1 0-.708M3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026z" />
                                 </svg>
-                            </a>
+                            </div>
                         </td>
                         <td class="admin__content-cell">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#admin-modal-delete"
+                            <div class="admin__content-links" data-bs-toggle="modal" data-bs-target="#admin-modal-delete"
                                 (click)="selectAccommodationId(accommodation.id)">
-                                <svg class="admin__content-links" xmlns="http://www.w3.org/2000/svg" width="25"
+                                <svg  xmlns="http://www.w3.org/2000/svg" width="25"
                                     height="25" fill="#272A57" class="bi bi-trash-fill" viewBox="0 0 16 16">
                                     <path
                                         d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5M8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5m3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0" />
                                 </svg>
-                            </a>
+                            </div>
                         </td>
                     </tr>
                 </tbody>
