--- a/src/app/components/admin/admin-books/admin-books.component.html
+++ b/src/app/components/admin/admin-books/admin-books.component.html
@@ -187,14 +187,14 @@
                         <td class="admin__content-cell">{{ book.client.id }}.- {{ book.client.name }} {{ book.client.surname }}</td>
                         <td class="admin__content-cell">{{ book.client.email }}</td>
                         <td class="admin__content-cell">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#admin-modal-delete"
+                            <div class="admin__content-links" data-bs-toggle="modal" data-bs-target="#admin-modal-delete"
                                 (click)="selectBookId(book.id)">
-                                <svg class="admin__content-links" xmlns="http://www.w3.org/2000/svg" width="25"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="25"
                                     height="25" fill="#272A57" class="bi bi-trash-fill" viewBox="0 0 16 16">
                                     <path
                                         d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5M8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5m3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0" />
                                 </svg>
-                            </a>
+                            </div>
                         </td>
                     </tr>
                 </tbody>
