--- a/src/app/components/admin/admin-users/admin-users.component.html
+++ b/src/app/components/admin/admin-users/admin-users.component.html
@@ -52,9 +52,9 @@
         <section class="admin__content col-xxl-10 col-lg-9">
             <div class="admin__content-title mt-4 ms-3">Gestión de administradores</div>
             <div class="d-flex justify-content-end mb-2 ">
-                <div class="admin__content-add-button">
+                <div class="admin__content-add-button admin__content-links">
                     <a href="" class="me-3" data-bs-toggle="modal" data-bs-target="#admin-modal-create-admin">
-                        <svg class="admin__content-links" xmlns="http://www.w3.org/2000/svg" width="35" height="35"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35"
                             fill="#272A57" class="bi bi-plus-circle" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
                             <path
@@ -79,14 +79,14 @@
                         <td class="admin__content-cell">{{ admin.name }}</td>
                         <td class="admin__content-cell">{{ admin.email }}</td>
                         <td class="admin__content-cell">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#admin-modal-delete-admin"
-                                (click)="selectClientId(admin.id)">
-                                <svg class="admin__content-links" xmlns="http://www.w3.org/2000/svg" width="25"
+                            <div data-bs-toggle="modal" data-bs-target="#admin-modal-delete-admin"
+                                (click)="selectClientId(admin.id)" class="admin__content-links">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="25"
                                     height="25" fill="#272A57" class="bi bi-trash-fill" viewBox="0 0 16 16">
                                     <path
                                         d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5M8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5m3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0" />
                                 </svg>
-                            </a>
+                            </div>
                         </td>
                     </tr>
                 </tbody>
@@ -186,14 +186,14 @@
                         [(ngModel)]="clientsFilter.name" placeholder="Búsqueda por nombre">
                 </div>
                 <div class="admin__content-add-button">
-                    <a href="" class="me-3" data-bs-toggle="modal" data-bs-target="#admin-modal-create">
-                        <svg class="admin__content-links" xmlns="http://www.w3.org/2000/svg" width="35" height="35"
+                    <div class="admin__content-links me-3" data-bs-toggle="modal" data-bs-target="#admin-modal-create">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35"
                             fill="#272A57" class="bi bi-plus-circle" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
                             <path
                                 d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4" />
                         </svg>
-                    </a>
+                    </div>
                 </div>
             </div>
             <table class="admin__content-table text-center mb-4 mx-2 mx-lg-0">
@@ -275,14 +275,14 @@
                         <td class="admin__content-cell">{{ client.email }}</td>
                         <td class="admin__content-cell">{{ client.phone }}</td>
                         <td class="admin__content-cell">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#admin-modal-delete"
-                                (click)="selectClientId(client.id)">
-                                <svg class="admin__content-links" xmlns="http://www.w3.org/2000/svg" width="25"
+                            <div data-bs-toggle="modal" data-bs-target="#admin-modal-delete"
+                                (click)="selectClientId(client.id)" class="admin__content-links">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="25"
                                     height="25" fill="#272A57" class="bi bi-trash-fill" viewBox="0 0 16 16">
                                     <path
                                         d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5M8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5m3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0" />
                                 </svg>
-                            </a>
+                            </div>
                         </td>
                     </tr>
                 </tbody>
