Arrastre de información entre componentes para evitar errores de funcionamiento

--- a/src/app/components/consulta/consulta.component.html
+++ b/src/app/components/consulta/consulta.component.html
@@ -317,7 +317,7 @@
                         <div class="consulta__results-alohamiento-information col-lg-6">
 
                             <div class="row">
-                                <a [routerLink]="['/details']" class="consulta__results-alohamiento-name">NH Collection Sevilla</a>
+                                <a  (click)='searchDetails()' class="consulta__results-alohamiento-name">NH Collection Sevilla</a>
                             </div>
                             <div class="consulta__results-alohamiento-direction row">
                                 <div>Av. de Diego Martínez Barrio, 8, 41013 Sevilla</div>
